crates/nyx-lexer/tests/snapshots/integration_tests__functions__no_return_type.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: say_hello
- LParen
- RParen
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: do_nothing
- LParen
- RParen
- Newline
- Indent
- Pass
- Newline
- Dedent
