crates/nyx-lexer/tests/snapshots/integration_tests__functions__return_pointer.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: alloc_byte
- LParen
- RParen
- Arrow
- Star
- Mut
- U8
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: get_ptr
- LParen
- Ident: data
- Colon
- Star
- U8
- RParen
- Arrow
- Star
- U8
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: opt_ptr
- LParen
- RParen
- Arrow
- Question
- Star
- U8
- Newline
- Indent
- Pass
- Newline
- Dedent
